testsuite/tests/properties/invalid_and_or/op_eq.lkt
import common

class Example: FooNode implements TokenNode {
    @ignored
    fun f(lhs: Bool, rhs: Bool): Bool = lhs %and lhs
}
